--- a/projects.html
+++ b/projects.html
@@ -515,6 +515,96 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card">
+                <div class="project-card-list">
+                    <h3 class="project-card-title">Дом TILO 1</h3>
+                    <div class="project-container-content">
+                        <div class="project-container">
+                            <div class="project-card-container">
+                                <p class="project-card-text">Дата постройки:</p>
+                                <p class="project-card-text weight-500">июнь 2024г.</p>
+                            </div>
+                            <div class="project-card-container  ">
+                                <p class="project-card-text">Технология <br />
+                                    строительства:</p>
+                                <p class="project-card-text weight-500">2024</p>
+                            </div>
+                            <div class="project-card-container">
+                                <p class="project-card-text">Основной <br />
+                                    материал стен:</p>
+                                <p class="project-card-text weight-500">2024</p>
+                            </div>
+                            <div class="project-card-container  ">
+                                <p class="project-card-text">Полезная площадь:</p>
+                                <p class="project-card-text weight-500">2024</p>
+                            </div>
+                            <div class="project-card-container">
+                                <p class="project-card-text">Площадь застройки:</p>
+                                <p class="project-card-text weight-500">2024</p>
+                            </div>
+                            <div class="project-card-container  ">
+                                <p class="project-card-text">Площадь террасы:</p>
+                                <p class="project-card-text weight-500">2024</p>
+                            </div>
+                            <div class="project-card-container">
+                                <p class="project-card-text">Высота потолков:</p>
+                                <p class="project-card-text weight-500">2024</p>
+                            </div>
+                            <div class="project-card-container  ">
+                                <p class="project-card-text">Габариты дома:</p>
+                                <p class="project-card-text weight-500">2024</p>
+                            </div>
+                        </div>
+                        <div class="project-container-info">
+                            <p class="project-card-title weight-500">1 000 000 ₽</p>
+                            <div class="btn">
+                                <p class="text-24 btn-text">Заказать</p>
+                                <img src="./images/arrow.png" alt="arrow">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swipers-container">
+                    <div class="swiper mySwiper-5"
+                        style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff">
+                        <div class="swiper-wrapper">
+                            <!-- Slides -->
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-tilo-1.jpg" alt="Модульный дом">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-tilo-2.jpg" alt="Модульный дом">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-tilo-3.jpg" alt="Модульный дом">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-tilo-4.jpg" alt="Модульный дом">
+                            </div>
+                        </div>
+                        <!-- If we need navigation buttons -->
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+                    <div class="swiper swiper-thumbs mySwiper-thumbs-5">
+                        <div class="swiper-wrapper">
+                            <!-- Slides -->
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-tilo-1.jpg" alt="Модульный дом">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-tilo-2.jpg" alt="Модульный дом">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-tilo-3.jpg" alt="Модульный дом">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="./images/houses/house-tilo-4.jpg" alt="Модульный дом">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     </section>
