gallery mob version, button links and small changes

--- a/contacts.html
+++ b/contacts.html
@@ -60,7 +60,7 @@
                 <input type="text" placeholder="Имя" class="input-name bg-white">
                 <input type="number" placeholder="Телефон" class="input-phone bg-white">
                 <div class="check-container">
-                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <a class="check"
+                    <input type="checkbox" id="check" required><label class="check" for="check">Я соглашаюсь с <a class="check"
                             href="./policy.html">политикой
                             конфиденциальности</a></label>
                 </div>
