--- a/gallery.html
+++ b/gallery.html
@@ -67,12 +67,33 @@
         </div>
         <div class="popup-image popup-hidden">
             <div class="popup-image-wrapper">
-                <span id="close">×</span>
-                <div class="arrow arrow-prev">&lt;</div>
+                <svg id="close" width="28" height="28" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M13.0608 13.0607C13.6465 12.4749 13.6465 11.5251 13.0608 10.9393L3.51482 1.3934C2.92903 0.807611 1.97928 0.807611 1.3935 1.3934C0.807712 1.97919 0.807712 2.92893 1.3935 3.51472L9.87878 12L1.3935 20.4853C0.807712 21.0711 0.807712 22.0208 1.3935 22.6066C1.97928 23.1924 2.92903 23.1924 3.51482 22.6066L13.0608 13.0607ZM12 13.5H12.0001V10.5H12V13.5Z"
+                        fill="#333333" />
+                    <path
+                        d="M10.9394 13.0607C10.3536 12.4749 10.3536 11.5251 10.9394 10.9393L20.4854 1.3934C21.0712 0.807611 22.0209 0.807611 22.6067 1.3934C23.1925 1.97919 23.1925 2.92893 22.6067 3.51472L14.1214 12L22.6067 20.4853C23.1925 21.0711 23.1925 22.0208 22.6067 22.6066C22.0209 23.1924 21.0712 23.1924 20.4854 22.6066L10.9394 13.0607ZM12.0002 13.5H12.0001V10.5H12.0002V13.5Z"
+                        fill="#333333" />
+                </svg>
+                <div class="arrow arrow-prev">
+                    <svg class="arrow-svg" width="50" height="50" viewBox="0 0 60 60" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M40.4487 8.17168C39.4722 7.19538 37.8895 7.19538 36.913 8.17168L20.3019 24.7829C17.3738 27.7111 17.3729 32.4581 20.2999 35.3873L36.7257 51.8258C37.702 52.8023 39.285 52.8023 40.2612 51.8258C41.2375 50.8496 41.2375 49.2666 40.2612 48.2903L23.8311 31.8603C22.8548 30.8838 22.8548 29.3011 23.8311 28.3248L40.4487 11.7072C41.425 10.7309 41.425 9.148 40.4487 8.17168Z"
+                            fill="currentColor" />
+                    </svg>
+                </div>
                 <img src="./images/houses/house-tilo-1.jpg" alt="картинка дома">
-                <div class="arrow arrow-next">&gt;</div>
+                <div class="arrow arrow-next">
+                    <svg class="arrow-svg" width="50" height="50" viewBox="0 0 60 60" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M19.5513 51.8279C20.5276 52.8042 22.1105 52.8042 23.0869 51.8279L39.698 35.2167C42.6262 32.2884 42.627 27.5415 39.7 24.6121L23.2742 8.17365C22.2979 7.19733 20.715 7.19733 19.7387 8.17365C18.7624 9.14995 18.7624 10.7329 19.7387 11.7092L36.1687 28.1392C37.1452 29.1157 37.1452 30.6985 36.1687 31.6747L19.5513 48.2922C18.575 49.2687 18.575 50.8515 19.5513 51.8279Z"
+                            fill="currentColor" />
+                    </svg>
+                </div>
             </div>
-        </div>
     </section>
     <section class="contacts bg-grey">
         <img src="./images/project-img.png" alt="" width="892">
@@ -82,7 +103,7 @@
                 <input type="text" placeholder="Имя" class="input-name bg-white">
                 <input type="number" placeholder="Телефон" class="input-phone bg-white">
                 <div class="check-container">
-                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <a class="check"
+                    <input type="checkbox" id="check" required><label class="check" for="check">Я соглашаюсь с <a class="check"
                             href="./policy.html">политикой
                             конфиденциальности</a></label>
                 </div>
