--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <div class="btn">
                 <p class="text-24 btn-text">Выбрать&nbsp;дом</p>
                 <img src="./images/arrow.png" alt="arrow">
+                <a href="./projects.html" class="btn-link"></a>
             </div>
         </section>
     </div>
@@ -73,6 +74,7 @@
             <div class="btn">
                 <p class="text-24 btn-text">Сделать заказ</p>
                 <img src="./images/arrow.png" alt="arrow">
+                <a href="#form" class="btn-link"></a>
             </div>
         </div>
         <div class="about-container-text">
@@ -167,6 +169,7 @@
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
+                               <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -266,6 +269,7 @@
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
+                                <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -365,6 +369,7 @@
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
+                                <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -420,6 +425,7 @@
         <div class="btn btn-white">
             <p class="text-24 btn-text text-24-green">Посмотреть все&nbsp;проекты</p>
             <img src="./images/arrow-green.png" alt="arrow">
+            <a href="./projects.html" class="btn-link"></a>
         </div>
     </section>
     <section class="green-bg">
@@ -469,7 +475,7 @@
             </div>
         </div>
     </section>
-    <section class="contacts">
+    <section class="contacts" id="form">
         <img src="./images/project-img.png" alt="картинка дома">
         <div class="form-container">
             <h2 class="text-42">Оставить заявку</h2>
@@ -477,7 +483,7 @@
                 <input type="text" placeholder="Имя" class="input-name">
                 <input type="number" placeholder="Телефон" class="input-phone">
                 <div class="check-container">
-                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <a class="check"
+                    <input type="checkbox" id="check" required><label class="check" for="check">Я соглашаюсь с <a class="check"
                             href="./policy.html">политикой
                             конфиденциальности</a></label>
                 </div>
