--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,7 @@
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
+                                <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -179,6 +180,7 @@
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
+                                <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -278,6 +280,7 @@
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
+                                <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -374,6 +377,7 @@
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
+                                <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -470,6 +474,7 @@
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
+                                <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -560,6 +565,7 @@
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
+                                <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -608,7 +614,7 @@
         </div>
     </section>
     </section>
-    <section class="contacts bg-grey">
+    <section class="contacts bg-grey" id="form">
         <img src="./images/project-img.png" alt="" width="892">
         <div class="form-container">
             <h2 class="text-42">Оставить заявку</h2>
@@ -616,7 +622,7 @@
                 <input type="text" placeholder="Имя" class="input-name bg-white">
                 <input type="number" placeholder="Телефон" class="input-phone bg-white">
                 <div class="check-container">
-                    <input type="checkbox" id="check"><label class="check" for="check">Я соглашаюсь с <a
+                    <input type="checkbox" id="check" required><label class="check" for="check">Я соглашаюсь с <a
                         class="check" href="./policy.html">политикой
                         конфиденциальности</a></label>
                 </div>
