--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
     <script defer src="./gallery.js"></script>
+    <script defer src="./form.js"></script>
 </head>
 
 <body>
