--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
     <script defer src="./swiper_index.js"></script>
+    <script defer src="./form.js"></script>
 </head> 
 
 <body>
@@ -487,7 +488,7 @@
                             href="./policy.html">политикой
                             конфиденциальности</a></label>
                 </div>
-                <button class="btn-form">Отправить</button>
+                <button onclick="checkCheckbox()" class="btn-form">Отправить</button>
             </form>
         </div>
     </section>
