--- a/contacts.html
+++ b/contacts.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
+    <script defer src="./form.js"></script>
 </head>
 
 <body>
