--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
     <script defer src="./swiper_projects.js"></script>
+    <script defer src="./form.js"></script>
 </head>
 
 <body>
