changed address and its map

--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
         <div class="map-container">
             <div class="map-container-list">
                 <img src="./images/map-icon.png" alt="иконка" width="24">
-                <p class="map-text">г. Санкт-Петербург, ул. Репищева, д. 10, корп. 2</p>
+                <p class="map-text">Ленинградская область,<br>Приозерский район, КП «Norland», уч. 53</p>
             </div>
             <div class="map-container-list">
                 <img src="./images/calendar-icon.png" alt="иконка" width="24">
