--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/media.css">
     <script defer src="./swiper_index.js"></script>
     <script defer src="./form.js"></script>
-</head> 
+</head>
 
 <body>
     <div class="bg-hero">
@@ -36,7 +36,8 @@
         <section class="hero">
             <div class="hero-text">
                 <h1 class="main-title">Энергоэффективный и&nbsp;надежный дом
-                    <span class="marker">за&nbsp;70&nbsp;дней.</span></h1>
+                    <span class="marker">за&nbsp;70&nbsp;дней.</span>
+                </h1>
                 <p class="hero-text text-32">С&nbsp;чистовой отделкой&nbsp;и коммуникациями
                     от&nbsp;38&nbsp;300&nbsp;₽/м²!</p>
             </div>
@@ -132,45 +133,45 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">июнь 2024г.</p>
+                                <p class="project-card-text weight-500">октябрь 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
                                     строительства:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">каркасная</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Основной <br />
                                     материал стен:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">доска из массива сосны АВ</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Полезная площадь:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">35.3 кв.м.</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Площадь застройки:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">66 кв.м.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Площадь террасы:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">30 кв.м.</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Высота потолков:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">2.4-2.6 м</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Габариты дома:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">6*6*2.8 м.</p>
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <p class="project-card-title weight-500">1 000 000 ₽</p>
+                            <p class="project-card-title weight-500">3 300 000 ₽</p>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
-                               <a href="#form" class="btn-link"></a>
+                                <a href="#form" class="btn-link"></a>
                             </div>
                         </div>
                     </div>
@@ -232,41 +233,41 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">июнь 2024г.</p>
+                                <p class="project-card-text weight-500">май 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
                                     строительства:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">каркасная</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Основной <br />
                                     материал стен:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">доска из массива сосны АВ</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Полезная площадь:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">25.2 кв.м.</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Площадь застройки:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">46 кв.м.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Площадь террасы:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">20 кв.м.</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Высота потолков:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">2.4 м</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Габариты дома:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">2.6*10*2.6 м.</p>
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <p class="project-card-title weight-500">1 000 000 ₽</p>
+                            <p class="project-card-title weight-500">2 300 000 ₽</p>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
@@ -332,41 +333,41 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">июнь 2024г.</p>
+                                <p class="project-card-text weight-500">апрель 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
                                     строительства:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">каркасная</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Основной <br />
                                     материал стен:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">доска из массива сосны АВ</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Полезная площадь:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">46 кв.м.</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Площадь застройки:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">76 кв.м.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Площадь террасы:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">30 кв.м.</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Высота потолков:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">2.4-2.7 м</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Габариты дома:</p>
-                                <p class="project-card-text weight-500">2024</p>
+                                <p class="project-card-text weight-500">6*8*3.8 м.</p>
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <p class="project-card-title weight-500">1 000 000 ₽</p>
+                            <p class="project-card-title weight-500">5 390 000 ₽</p>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
@@ -484,8 +485,8 @@
                 <input type="text" placeholder="Имя" class="input-name">
                 <input type="number" placeholder="Телефон" class="input-phone">
                 <div class="check-container">
-                    <input type="checkbox" id="check" required><label class="check" for="check">Я соглашаюсь с <a class="check"
-                            href="./policy.html">политикой
+                    <input type="checkbox" id="check" required><label class="check" for="check">Я соглашаюсь с <a
+                            class="check" href="./policy.html">политикой
                             конфиденциальности</a></label>
                 </div>
                 <button onclick="checkCheckbox()" class="btn-form">Отправить</button>
