added small changes

--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                             <div class="project-card-container">
                                 <p class="project-card-text">Основной <br />
                                     материал стен:</p>
-                                <p class="project-card-text weight-500">доска из массива сосны АВ</p>
+                                <p class="project-card-text project-card-text-right weight-500">доска <br /> из массива
+                                    сосны АВ</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Полезная площадь:</p>
@@ -167,7 +168,14 @@
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <p class="project-card-title weight-500">3 300 000 ₽</p>
+                            <div class="project-card-container__price">
+                                <p class="project-card-title weight-500">За&nbsp;теплый контур:</p>
+                                <p class="project-card-title weight-500">2&nbsp;300&nbsp;000&nbsp;₽</p>
+                            </div>
+                            <div class="project-card-container__price">
+                                <p class="project-card-title weight-500">Под&nbsp;ключ:</p>
+                                <p class="project-card-title weight-500">3&nbsp;300&nbsp;000&nbsp;₽</p>
+                            </div>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
@@ -243,7 +251,8 @@
                             <div class="project-card-container">
                                 <p class="project-card-text">Основной <br />
                                     материал стен:</p>
-                                <p class="project-card-text weight-500">доска из массива сосны АВ</p>
+                                <p class="project-card-text project-card-text-right weight-500">доска <br /> из массива
+                                    сосны АВ</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Полезная площадь:</p>
@@ -267,7 +276,14 @@
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <p class="project-card-title weight-500">2 300 000 ₽</p>
+                            <div class="project-card-container__price">
+                                <p class="project-card-title weight-500">За&nbsp;теплый контур:</p>
+                                <p class="project-card-title weight-500">1&nbsp;600&nbsp;000&nbsp;₽</p>
+                            </div>
+                            <div class="project-card-container__price">
+                                <p class="project-card-title weight-500">Под&nbsp;ключ:</p>
+                                <p class="project-card-title weight-500">2&nbsp;300&nbsp;000&nbsp;₽</p>
+                            </div>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
@@ -343,7 +359,8 @@
                             <div class="project-card-container">
                                 <p class="project-card-text">Основной <br />
                                     материал стен:</p>
-                                <p class="project-card-text weight-500">доска из массива сосны АВ</p>
+                                <p class="project-card-text project-card-text-right weight-500">доска <br /> из массива
+                                    сосны АВ</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Полезная площадь:</p>
@@ -367,7 +384,14 @@
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <p class="project-card-title weight-500">5 390 000 ₽</p>
+                            <div class="project-card-container__price">
+                                <p class="project-card-title weight-500">За&nbsp;теплый контур:</p>
+                                <p class="project-card-title weight-500">3&nbsp;800&nbsp;000&nbsp;₽</p>
+                            </div>
+                            <div class="project-card-container__price">
+                                <p class="project-card-title weight-500">Под&nbsp;ключ:</p>
+                                <p class="project-card-title weight-500">5&nbsp;490&nbsp;000&nbsp;₽</p>
+                            </div>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
                                 <img src="./images/arrow.png" alt="arrow">
