--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
                 <p class="text-24 text-black">+7&nbsp;999&nbsp;999-99-99</p>
             </a>
             <a href="#"><img src="./images/tg-icon.png" alt="telegram" width="32"></a>
-            <a href="#"><img src="./images/vk-icon.png" alt="vk" width="32"></a>
+            <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk-icon.png" alt="vk" width="32"></a>
         </div>
     </header>
     <section class="gallery">
@@ -124,12 +124,12 @@
                     </ul>
                 </div>
                 <div class="footer-contacts">
-                    <a href="#">
-                        <p class="text-24 tel">+7&nbsp;999&nbsp;999-99-99</p>
+                    <a href="tel:+79522183266">
+                        <p class="text-24 tel">+7&nbsp;952&nbsp;218-32-66</p>
                     </a>
                     <div class="socials">
                         <a href="#"><img src="./images/tg-icon.png" alt="telegram"></a>
-                        <a href="#"><img src="./images/vk-icon.png" alt="vk"></a>
+                        <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk-icon.png" alt="vk"></a>
                     </div>
                 </div>
             </div>
