--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p class="text-24">+7&nbsp;999&nbsp;999-99-99</p>
                 </a>
                 <a href="#"><img src="./images/tg.svg" alt="telegram" width="32"></a>
-                <a href="#"><img src="./images/vk.svg" alt="vk" width="32"></a>
+                <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk.svg" alt="vk" width="32"></a>
             </div>
         </header>
         <section class="hero">
@@ -534,7 +534,7 @@
                     </a>
                     <div class="socials">
                         <a href="#"><img src="./images/tg-icon.png" alt="telegram"></a>
-                        <a href="#"><img src="./images/vk-icon.png" alt="vk"></a>
+                        <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk-icon.png" alt="vk"></a>
                     </div>
                 </div>
             </div>
