--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
             <div class="nav-social">
                 <a href="#">
-                    <p class="text-24">+7&nbsp;999&nbsp;999-99-99</p>
+                    <p class="text-24">+7&nbsp;952&nbsp;218-32-66</p>
                 </a>
                 <a href="#"><img src="./images/tg.svg" alt="telegram" width="32"></a>
                 <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk.svg" alt="vk" width="32"></a>
@@ -168,13 +168,15 @@
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <div class="project-card-container__price">
-                                <p class="project-card-title weight-500">За&nbsp;теплый контур:</p>
-                                <p class="project-card-title weight-500">2&nbsp;300&nbsp;000&nbsp;₽</p>
-                            </div>
-                            <div class="project-card-container__price">
-                                <p class="project-card-title weight-500">Под&nbsp;ключ:</p>
-                                <p class="project-card-title weight-500">3&nbsp;300&nbsp;000&nbsp;₽</p>
+                            <div class="price-wrapper">
+                                <div class="project-card-container__price">
+                                    <p class="project-card-title weight-500">За&nbsp;теплый контур:</p>
+                                    <p class="project-card-title weight-500">2&nbsp;300&nbsp;000&nbsp;₽</p>
+                                </div>
+                                <div class="project-card-container__price">
+                                    <p class="project-card-title weight-500">Под&nbsp;ключ:</p>
+                                    <p class="project-card-title weight-500">3&nbsp;300&nbsp;000&nbsp;₽</p>
+                                </div>
                             </div>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
@@ -276,13 +278,15 @@
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <div class="project-card-container__price">
-                                <p class="project-card-title weight-500">За&nbsp;теплый контур:</p>
-                                <p class="project-card-title weight-500">1&nbsp;600&nbsp;000&nbsp;₽</p>
-                            </div>
-                            <div class="project-card-container__price">
-                                <p class="project-card-title weight-500">Под&nbsp;ключ:</p>
-                                <p class="project-card-title weight-500">2&nbsp;300&nbsp;000&nbsp;₽</p>
+                            <div class="price-wrapper">
+                                <div class="project-card-container__price">
+                                    <p class="project-card-title weight-500">За&nbsp;теплый контур:</p>
+                                    <p class="project-card-title weight-500">1&nbsp;600&nbsp;000&nbsp;₽</p>
+                                </div>
+                                <div class="project-card-container__price">
+                                    <p class="project-card-title weight-500">Под&nbsp;ключ:</p>
+                                    <p class="project-card-title weight-500">2&nbsp;300&nbsp;000&nbsp;₽</p>
+                                </div>
                             </div>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
@@ -384,13 +388,15 @@
                             </div>
                         </div>
                         <div class="project-container-info">
-                            <div class="project-card-container__price">
-                                <p class="project-card-title weight-500">За&nbsp;теплый контур:</p>
-                                <p class="project-card-title weight-500">3&nbsp;800&nbsp;000&nbsp;₽</p>
-                            </div>
-                            <div class="project-card-container__price">
-                                <p class="project-card-title weight-500">Под&nbsp;ключ:</p>
-                                <p class="project-card-title weight-500">5&nbsp;490&nbsp;000&nbsp;₽</p>
+                            <div class="price-wrapper">
+                                <div class="project-card-container__price">
+                                    <p class="project-card-title weight-500">За&nbsp;теплый контур:</p>
+                                    <p class="project-card-title weight-500">3&nbsp;800&nbsp;000&nbsp;₽</p>
+                                </div>
+                                <div class="project-card-container__price">
+                                    <p class="project-card-title weight-500">Под&nbsp;ключ:</p>
+                                    <p class="project-card-title weight-500">5&nbsp;490&nbsp;000&nbsp;₽</p>
+                                </div>
                             </div>
                             <div class="btn">
                                 <p class="text-24 btn-text">Заказать</p>
@@ -506,14 +512,14 @@
         <div class="form-container">
             <h2 class="text-42">Оставить заявку</h2>
             <form class="form">
-                <input type="text" placeholder="Имя" class="input-name">
-                <input type="number" placeholder="Телефон" class="input-phone">
+                <input type="text" placeholder="Имя" class="input-name" required>
+                <input type="number" placeholder="Телефон" class="input-phone" required>
                 <div class="check-container">
                     <input type="checkbox" id="check" required><label class="check" for="check">Я соглашаюсь с <a
                             class="check" href="./policy.html">политикой
                             конфиденциальности</a></label>
                 </div>
-                <button onclick="checkCheckbox()" class="btn-form">Отправить</button>
+                <button type="submit" class="btn-form">Отправить</button>
             </form>
         </div>
     </section>
@@ -530,7 +536,7 @@
                 </div>
                 <div class="footer-contacts">
                     <a href="#">
-                        <p class="text-24 tel">+7&nbsp;999&nbsp;999-99-99</p>
+                        <p class="text-24 tel">+7&nbsp;952&nbsp;218-32-66</p>
                     </a>
                     <div class="socials">
                         <a href="#"><img src="./images/tg-icon.png" alt="telegram"></a>
