--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,7 @@
         </ul>
         <div class="nav-social">
             <a href="#">
-                <p class="text-24 text-black">+7&nbsp;999&nbsp;999-99-99</p>
+                <p class="text-24 text-black">+7&nbsp;952&nbsp;218-32-66</p>
             </a>
             <a href="#"><img src="./images/tg-icon.png" alt="telegram" width="32"></a>
             <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk-icon.png" alt="vk" width="32"></a>
@@ -45,7 +45,7 @@
             </div>
             <div class="map-container-list">
                 <img src="./images/phone-icon.png" alt="иконка" width="24">
-                <a class="map-text" href="">+7 999 999-99-99</a>
+                <a class="map-text" href="">+7&nbsp;952&nbsp;218-32-66</a>
             </div>
             <div class="map-container-list">
                 <img src="./images/mail-icon.png" alt="иконка" width="24">
@@ -58,14 +58,14 @@
         <div class="form-container">
             <h2 class="text-42">Оставить заявку</h2>
             <form class="form">
-                <input type="text" placeholder="Имя" class="input-name bg-white">
-                <input type="number" placeholder="Телефон" class="input-phone bg-white">
+                <input type="text" placeholder="Имя" class="input-name bg-white" required>
+                <input type="number" placeholder="Телефон" class="input-phone bg-white" required>
                 <div class="check-container">
                     <input type="checkbox" id="check" required><label class="check" for="check">Я соглашаюсь с <a class="check"
                             href="./policy.html">политикой
                             конфиденциальности</a></label>
                 </div>
-                <button class="btn-form">Отправить</button>
+                <button type="submit" class="btn-form">Отправить</button>
             </form>
         </div>
     </section>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="footer-contacts">
                     <a href="#">
-                        <p class="text-24 tel">+7&nbsp;999&nbsp;999-99-99</p>
+                        <p class="text-24 tel">+7&nbsp;952&nbsp;218-32-66</p>
                     </a>
                     <div class="socials">
                         <a href="#"><img src="./images/tg-icon.png" alt="telegram"></a>
