--- a/policy.html
+++ b/policy.html
@@ -14,6 +14,21 @@
 </head>
 
 <body>
+    <header class="header">
+        <h2 class="logo text-28 text-black"><a class="logo text-28 text-black" href="./index.html">Прочно</a></h2>
+        <ul class="nav">
+            <li class="text-20 text-black"><a class="text-20 text-black" href="./projects.html">Проекты</a></li>
+            <li class="text-20 text-black"><a class="text-20 text-black" href="./gallery.html">Галерея</a></li>
+            <li class="text-20 text-black"><a class="text-20 text-black" href="./contacts.html">Контакты</a></li>
+        </ul>
+        <div class="nav-social">
+            <a href="#">
+                <p class="text-24 text-black">+7&nbsp;952&nbsp;218-32-66</p>
+            </a>
+            <a href="#"><img src="./images/tg-icon.png" alt="telegram" width="32"></a>
+            <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk-icon.png" alt="vk" width="32"></a>
+        </div>
+    </header>
     <section class="policy">
         <h2 class="text-42 text-black">Политика конфиденциальности</h2>
         <h3 class="text-24 text-black">1. Общие положения <br /> </h3>
