--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,7 @@
             <a href="#">
                 <p class="text-24 text-black">+7&nbsp;952&nbsp;218-32-66</p>
             </a>
-            <a href="#"><img src="./images/tg-icon.png" alt="telegram" width="32"></a>
+            <a href="@prochnostroy"><img src="./images/tg-icon.png" alt="telegram" width="32"></a>
             <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk-icon.png" alt="vk" width="32"></a>
         </div>
     </header>
@@ -49,7 +49,7 @@
             </div>
             <div class="map-container-list">
                 <img src="./images/mail-icon.png" alt="иконка" width="24">
-                <a class="map-text" href="">qwerty@mail.ru</a>
+                <a class="map-text" href="">Prochnostroy@yandex.ru</a>
             </div>
         </div>
     </section>
@@ -85,7 +85,7 @@
                         <p class="text-24 tel">+7&nbsp;952&nbsp;218-32-66</p>
                     </a>
                     <div class="socials">
-                        <a href="#"><img src="./images/tg-icon.png" alt="telegram"></a>
+                        <a href="@prochnostroy"><img src="./images/tg-icon.png" alt="telegram"></a>
                         <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk-icon.png" alt="vk"></a>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
             <div class="footer-info">
                 <p>ИП Гендлин Юрий Максимович<br>ИНН 780107539268<br>ОГРНИП 321784700014744<br>ОКПО 2005094935
                 </p>
-                <p class="footer-info-remark">Сайт mhouse.pro носит информационный характер и не является публичной
+                <p class="footer-info-remark">Сайт prochnostroy.ru носит информационный характер и не является публичной
                     офертой, определяемой
                     положениями Ст. 437 ГК РФ.<br>Для получения более точной информации обращайтесь по указанным в
                     контактах телефонам.</p>
