--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#">
                     <p class="text-24">+7&nbsp;952&nbsp;218-32-66</p>
                 </a>
-                <a href="#"><img src="./images/tg.svg" alt="telegram" width="32"></a>
+                <a href="@prochnostroy"><img src="./images/tg.svg" alt="telegram" width="32"></a>
                 <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk.svg" alt="vk" width="32"></a>
             </div>
         </header>
@@ -539,7 +539,7 @@
                         <p class="text-24 tel">+7&nbsp;952&nbsp;218-32-66</p>
                     </a>
                     <div class="socials">
-                        <a href="#"><img src="./images/tg-icon.png" alt="telegram"></a>
+                        <a href="@prochnostroy"><img src="./images/tg-icon.png" alt="telegram"></a>
                         <a href="https://vk.com/club229168889?from=groups"><img src="./images/vk-icon.png" alt="vk"></a>
                     </div>
                 </div>
@@ -547,7 +547,7 @@
             <div class="footer-info">
                 <p>ИП Гендлин Юрий Максимович<br>ИНН 780107539268<br>ОГРНИП 321784700014744<br>ОКПО 2005094935
                 </p>
-                <p class="footer-info-remark">Сайт mhouse.pro носит информационный характер и не является публичной
+                <p class="footer-info-remark">Сайт prochnostroy.ru носит информационный характер и не является публичной
                     офертой, определяемой
                     положениями Ст. 437 ГК РФ.<br>Для получения более точной информации обращайтесь по указанным в
                     контактах телефонам.</p>
