--- a/contacts.html
+++ b/contacts.html
@@ -23,7 +23,7 @@
             <li class="text-20 text-black"><a class="text-20 text-black nav-underline" href="./contacts.html">Контакты</a></li>
         </ul>
         <div class="nav-social">
-            <a href="#">
+            <a href="tel:+79522183266">
                 <p class="text-24 text-black">+7&nbsp;952&nbsp;218-32-66</p>
             </a>
             <a href="@prochnostroy"><img src="./images/tg-icon.png" alt="telegram" width="32"></a>
@@ -45,7 +45,7 @@
             </div>
             <div class="map-container-list">
                 <img src="./images/phone-icon.png" alt="иконка" width="24">
-                <a class="map-text" href="">+7&nbsp;952&nbsp;218-32-66</a>
+                <a class="map-text" href="tel:+79522183266">+7&nbsp;952&nbsp;218-32-66</a>
             </div>
             <div class="map-container-list">
                 <img src="./images/mail-icon.png" alt="иконка" width="24">
@@ -81,7 +81,7 @@
                     </ul>
                 </div>
                 <div class="footer-contacts">
-                    <a href="#">
+                    <a href="tel:+79522183266">
                         <p class="text-24 tel">+7&nbsp;952&nbsp;218-32-66</p>
                     </a>
                     <div class="socials">
