--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
             <li class="text-20 text-black"><a class="text-20 text-black" href="./contacts.html">Контакты</a></li>
         </ul>
         <div class="nav-social">
-            <a href="#">
+            <a href="tel:+79522183266">
                 <p class="text-24 text-black">+7&nbsp;952&nbsp;218-32-66</p>
             </a>
             <a href="@prochnostroy"><img src="./images/tg-icon.png" alt="telegram" width="32"></a>
