--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="text-20"><a class="text-20" href="./contacts.html">Контакты</a></li>
             </ul>
             <div class="nav-social">
-                <a href="#">
+                <a href="tel:+79522183266">
                     <p class="text-24">+7&nbsp;952&nbsp;218-32-66</p>
                 </a>
                 <a href="@prochnostroy"><img src="./images/tg.svg" alt="telegram" width="32"></a>
@@ -535,7 +535,7 @@
                     </ul>
                 </div>
                 <div class="footer-contacts">
-                    <a href="#">
+                    <a href="tel:+79522183266">
                         <p class="text-24 tel">+7&nbsp;952&nbsp;218-32-66</p>
                     </a>
                     <div class="socials">
